--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,19 @@
 	<groupId>com.sirbishcopt</groupId>
 	<artifactId>unchartedwaters</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
 	<name>unchartedwaters</name>
 	<description>Discord bot assisting in Uncharted Waters event in King&apos;s Choice</description>
-	<properties>
+<!--	<properties>
 		<java.version>17</java.version>
-	</properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>-->
 	<dependencies>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -39,7 +45,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.2.0</version>
 		</dependency>
+
 	</dependencies>
 
 <!--	<build>
