--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>5.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.discord4j</groupId>
+            <artifactId>discord4j-core</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
