--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:file:./bd1
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.jpa.show-sql=true
